# automated-content-generator

./: Dockerfile  README.md  output.json  pyproject.toml  script.py
doc/: article_cot_output.json  article_fs_output.json  article_output.json  image_captioning.ipynb  poc.ipynb  tests.ipynb
src/core/: chat_completions.py  prompts.py
src/dataset/: arduino_seo_keywords.csv  br_history_keywords.csv  dinosaur_keywords.csv
