[tool.poetry]
name = "automated-content-generator"
version = "0.1.0"
description = "This is a basic prototype of an automated content generation system using Python and GPT-based models"
authors = ["Gabriel Freitas <gabhaf123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
openai = "^1.44.1"
groq = "^0.11.0"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
langchain = "^0.2.16"
crewai = "^0.55.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
